<resources>

    <string name="app_name">Prueba</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="label_status_gps">Status GPS:</string>
    <string name="label_nombre_usuario">Nombre de usuario:</string>
    <string name="label_posiciones">Posiciones:</string>
    <string name="label_estado_wifi_3g">Estado Wifi/3G:</string>
    <string name="label_pendientes">Pendientes:</string>
    <string name="label_tipo_cuenta">Tipo de cuenta:</string>
    <string name="label_solo_wifi">Solo wifi</string>
    <string name="label_solo_3g">Solo 3G</string>
    <string name="label_enviar_datos">Enviar datos</string>
    <string name="variable_status_gps">progreso#8230;</string>
    <string name="variable_nombre_usuario">progreso#8230;</string>
    <string name="variable_posiciones">progreso#8230;</string>
    <string name="variable_estado_wifi_3g">progreso#8230;</string>
    <string name="variable_pendientes">progreso#8230;</string>
    <string name="variable_tipo_cuenta">progreso#8230;</string>
    <string name="label_creador">Jhonny Juncal Gonzalez</string>
    <string name="label_desarrollado_por">Desarrollado por:</string>
    <string name="title_activity_posiciones">PosicionesActivity</string>
    <string name="title_activity_inicio">InicioActivity</string>
    <string name="label_usuario">Usuario:</string>
    <string name="label_contrasena">Contraseña:</string>
    <string name="label_acceso_aplicacion">Acceso</string>
    <string name="label_registro_nuevo">Usuario nuevo</string>
    <string name="label_recordar_pass">Recordar contraseña</string>
    <string name="msg_usuario_contrasena_obligatorios">Usuario y Contraseña son abligatorios</string>
    <string name="label_mostrar_mapa">Mostrar posiciones en mapa</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="mapa_ubicacion_inicial">"geo:0,0?q=Spain"</string>

</resources>